# Blog-simples-com-Flask

./: .env.exemplo  .gitignore  Dockerfile  Dockerfile-dokku  Dockerfile.exemplo  Procfile  boot.sh  config.py  pyproject.toml  readme.md  requirements.txt  wsgi.py
app/: __init__.py  blog.py  email.py  errors.py  forms.py  models.py
app/auth/: __init__.py  email.py  forms.py  routes.py
app/errors/: __init__.py  handlers.py
app/static/js/: contagem_textarea.js  create_post.js  popover.js
app/templates/: 404.html  _nav.html  _nav_posts.html  _post.html  base.html  create_post.html  edit_profile.html  index.html  login.html  messages.html  post_detalhes.html  register.html  reset_password.html  reset_password_request.html  send_message.html  user.html  user_popup.html
app/templates/auth/: login.html
app/templates/email/: reset_password.html  reset_password.txt
app/templates/errors/: 500.html
migrations/: env.py
migrations/versions/: 00430494a80c_tabela_de_usuários.py  0f073d261370_.py  2ef3ce6a4aee_novos_campos_adicionados_ao_modelo_user.py  37eb4de20a34_notificações.py  3ab842f52b18_tabela_de_posts.py  4a3fb2c84a39_criando_uma_tabela_para_mensagens_.py  996d7305af96_.py  a12bcf47fed7_seguidores.py
tests/: conftest.py  fixtures.py  test_follow_blog.py  test_rotas_auth.py  test_rotas_blog.py  test_routes_blog.py
