[tool.poetry]
name = "blog-simples-com-flask"
version = "0.1.0"
description = ""
authors = ["Thi <tiagoqueirozgoncalves100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
Flask-WTF = "^1.0.1"
python-decouple = "^3.6"
Flask-Babel = "^2.0.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Werkzeug = "^2.2.2"
Flask-Login = "^0.6.2"
email-validator = "^1.2.1"

[tool.poetry.dev-dependencies]
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
